<resources>
    <string name="app_name">Test3P</string>
    <string name="text_system_login">System Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="err_msg_email_required">Email sangat di butuhkan</string>
    <string name="err_msg_password_required">Password sangat di butuhkan</string>
    <string name="err_msg_email_format">Format email salah</string>
    <string name="err_msg_password_min_required">Setidaknya password harus 4 karakter</string>
    <string name="register">Register</string>
    <string name="list_member">Daftar Anggota</string>
    <string name="full_name">nama lengkap</string>
    <string name="address">Alamat</string>
    <string name="city">Kota</string>
    <string name="phone">Nomor Telpon</string>
    <string name="re_password">Ulangi password</string>
    <string name="company_name">Nama perusahaan</string>
    <string name="company_address">Alamat perusahaan</string>
    <string name="company_city">Kota</string>
    <string name="postal_code">Kode post</string>
    <string name="company_phone">Nomor telpon kantor</string>
    <string name="company_fax">Nomor Fax</string>
    <string name="company_email">Email</string>
    <string name="company_website">Website</string>
    <string name="company_since">Tahun berdiri</string>
    <string name="company_npwp">NPWP Perusahaan</string>
    <string name="company_pkp">Pengusaha Kena Pajak (PKP)</string>
    <string name="profile">Profile</string>
    <string name="group_members">Daftar anggota</string>
    <string name="dashboard">Dashboard</string>
    <string name="err_msg_name_not_empty">Nama Lengkap wajib diisi</string>
    <string name="err_msg_address_not_empty">Alamat wajib diisikan</string>
    <string name="err_msg_city_not_empty">Kota wajib diisikan</string>
    <string name="err_msg_phone_not_empty">Nomor Telpon wajib diisikan</string>
    <string name="err_msg_company_name_not_empty">Nama Perusahaan wajib diisikan</string>
    <string name="err_msg_password_not_same_min_required">Password tidak sama</string>
    <string name="err_msg_company_address_not_empty">Alamat tidak boleh kosong</string>
    <string name="err_msg_company_phone_not_empty">Nomor telepon wajib diisi</string>
    <string name="err_msg_company_since_not_empty">Tahun berdiri wajib diisi</string>
    <string name="err_msg_company_city_not_empty">Kota perusahaan wajib diisi</string>
    <string name="update">Update</string>
</resources>
